tests/pass/test_impl.tk
import std/io::println
import std/memory::assert

shape Rect (
    width: i32,
    height: i32
)

impl Rect {
    pub fn area(self) -> i32 {
        return self.width * self.height
    }
    
    pub fn perimeter(self) -> i32 {
        return (self.width + self.height) * 2
    }
}

fn main() -> i32 {
    auto r = Rect(width = 10, height = 20)
    
    // Test method call
    auto a = r.area()
    println("Area: {}", a)
    assert(a == 200, "Area mismatch")
    
    auto p = r.perimeter()
    println("Perimeter: {}", p)
    assert(p == 60, "Perimeter mismatch")
    return 0
}
